# gRPC-and-QUIC

./: .gitignore  README.md
grpc_http3/: Cargo.toml  build.rs  client.txt  server.txt  uploaded_example
grpc_http3/Tests/experiment1_2/: boxplot.py  boxplot_loss.py  loss.sh  run.sh  test.sh
grpc_http3/Tests/experiment3/: graph.py  quic.py  tcp.py
grpc_http3/Tests/experiment4_5/: graph.py  quic.py  tcp.py
grpc_http3/Tests/experiment6/: boxplot.py  graph.py  quic.py
grpc_http3/Tests/experiment7/: boxplot.py  boxplot_latency.py
grpc_http3/file_examples/: bigfile  file  middle.txt  small.txt
grpc_http3/proto/: echo.proto  filetransfer.proto
grpc_http3/src/: client.rs  quicConnector.rs  quicStream.rs  server.rs  server2.rs  tests.rs
grpc_http3/src/Bridging/: client.rs  server.rs
grpc_http3/src/HTTP2/: clientHTTP2.rs  serverHTTP2.rs
grpc_http3/src/HTTP2custom/: clientHTTP2.rs  serverHTTP2.rs
grpc_http3/src/UDP/: client_async.rs
grpc_http3/swift_file_examples/: README  other.txt
