[package]
name = "grpc_http3"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "server"
path = "src/server.rs"

[[bin]] 
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] } 
prost = "0.13"
tonic = "0.12" 
quiche = "0.22.0" 
hyper = "1.4.1" 
futures-util = "0.3.31" 
tower-service = "0.3.3"
futures-core = "0.3.31" 




[build-dependencies]
tonic-build = "0.12"
