[package]
name = "grpc_http3"
version = "0.1.0"
authors = ["Maxime Noël <maxime.noel2002@gmail.com>"]
edition = "2021"

[[bin]] 
name = "server"
path = "src/server.rs"

[[bin]] 
name = "client"
path = "src/client.rs"

[[bin]] 
name = "serverHTTP2"
path = "src/HTTP2/serverHTTP2.rs"
required-features = ["tls"]

[[bin]] 
name = "clientHTTP2"
path = "src/HTTP2/clientHTTP2.rs"
required-features = ["tls"]

[[bin]] 
name = "serverUDP"
path = "src/UDP/server_async.rs"

[[bin]] 
name = "clientUDP"
path = "src/UDP/client_async.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

[features]
tls = ["tonic/tls"]

[dependencies]
tokio = { version = "1.41.0", features = ["full"] } 
prost = "0.13"
tonic = "0.12" 
quiche = { path = "../quicheMultipath/quiche/quiche" }
hyper = "1.4.1" 
futures-util = "0.3.31" 
tower-service = "0.3.3"
futures-core = "0.3.31" 
docopt = "1"
env_logger = "0.10"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "2.5.3"
log = "0.4"
octets = {path = "../quicheMultipath/quiche/octets" }
ring = "0.17"
libc = "0.2"
nix = { version = "0.27", features = ["net", "socket", "uio"] }
flume = "0.11.1"
tokio-stream = "0.1.17" 
tower = "0.5.1"
hyper-util = "0.1.10"
slab = "0.4"
itertools = "0.10"
rand = "0.9.0"

[build-dependencies]
tonic-build = "0.12"
